--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,7 +22,7 @@ body {
     padding: 20px 0 50px 0 ;
     margin-top: 250px ;
     border-radius: 30px;
-    box-shadow: 0 0 20px 20px rgba(121, 0, 0, 0.4);
+    box-shadow: 0 0 10px 10px rgba(0, 0, 0, 0.473);
 }
 
 .header h1 { 
@@ -128,6 +128,7 @@ table, th, td {
 }
 
 table {
+    border-collapse: collapse;
     width: 80%;
     margin-top: 15px;
     margin-bottom: 25px;
